--- a/src/views/store/orders/orderDetails.ejs
+++ b/src/views/store/orders/orderDetails.ejs
@@ -25,11 +25,11 @@
                     <div class="col-md-6-details">
                         <h5 class="tittle5">Dirección de Envío</h5>
                         <p class="Information-details">
-                            <strong>Nombre:</strong> <%= order.nombre %> <%= order.apellido %><br>
-                            <strong>Direccion:</strong> <%= order.direccion %><br>
-                            <strong>Ciudad de envío:</strong> <%= order.ciudad_envio_nombre %><br>
-                            <strong>Distrito:</strong> <%= order.distrito %><br>
-                            <strong>Teléfono:</strong> <%= order.telefono %> <br>
+                            <strong>Nombre:</strong> <%= order.name %> <%= order.lastName %><br>
+                            <strong>Direccion:</strong> <%= order.address %><br>
+                            <strong>Ciudad de envío:</strong> <%= order.shippingCityName %><br>
+                            <strong>Distrito:</strong> <%= order.district %><br>
+                            <strong>Teléfono:</strong> <%= order.tel %> <br>
                             <strong>Email:</strong> <%= order.email %>
                         </p>
                     </div>
@@ -37,17 +37,17 @@
                         <h5 class="tittle5">Detalles</h5>
                         <p class="Information-details">
                             <strong>Fecha:</strong>
-                            <%= new Date(order.fecha_creacion).toLocaleString() %><br>
+                            <%= new Date(order.creationDate).toLocaleString() %><br>
                                 <strong>Estado:</strong> <span
-                                    class="badge-details <%= order.estado === 'pagado' ? 'badge-success-details' : '' %>">
-                                    <%= order.estado %>
+                                    class="badge-details <%= order.state === 'pagado' ? 'badge-success-details' : '' %>">
+                                    <%= order.state %>
                                 </span><br>
                                 <strong>Estado de Envío:</strong>
-                                <span class="badge-details <%= order.estado_envio === 'enviado' ? 'badge-warning-details' : 
-                                    order.estado_envio === 'entregado' ? 'badge-success-details' :
-                                    order.estado_envio === 'cancelado' ? 'badge-danger-details' : 
-                                    order.estado_envio === 'pendiente' ? 'badge-pending-details' : '' %>">
-                                    <%= order.estado_envio ? order.estado_envio.toUpperCase() : 'PENDIENTE' %>
+                                <span class="badge-details <%= order.shippingStatus === 'enviado' ? 'badge-warning-details' : 
+                                    order.shippingStatus === 'entregado' ? 'badge-success-details' :
+                                    order.shippingStatus === 'cancelado' ? 'badge-danger-details' : 
+                                    order.shippingStatus === 'pendiente' ? 'badge-pending-details' : '' %>">
+                                    <%= order.shippingStatus ? order.shippingStatus.toUpperCase() : 'PENDIENTE' %>
                                 </span><br>
                             <strong class="strong-details">Total:</strong> $<%= Number(order.total).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %>
                         </p>
@@ -69,19 +69,19 @@
                         <th>Cantidad</th>
                         <th>Precio</th>
                         <th>Impuesto</th>
-                        <th>Descuento%</th>
+                        <th>Descuento %</th>
                         <th>Subtotal</th>
                     </tr>
                 </thead>
                 <tbody>
                     <% order.items.forEach(item => { %>
                         <tr>
-                            <td><%= item.nombre_producto %> <%= item.specs %></td>
-                            <td><%= item.selectedColor.toUpperCase() %></td>
-                            <td><%= item.cantidad %></td>
-                            <td>$<%= Number(item.precio_unitario).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
-                            <td>$<%= (item.precio_unitario * item.cantidad * (item.impuesto / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
-                            <td>$<%= Number(item.descuento).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
+                            <td><%= item.productName %> <%= item.specs %></td>
+                            <td><%= item.selectedColor %></td>
+                            <td><%= item.quantity %></td>
+                            <td>$<%= Number(item.unitPrice).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
+                            <td>$<%= (item.unitPrice * item.quantity * (item.tax / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
+                            <td>$<%= Number(item.discount).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
                             <td>$<%= Number(item.subtotal).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
                         </tr>
                     <% }); %>
@@ -93,7 +93,7 @@
                     </tr>
                     <tr>
                         <th colspan="6" style="text-align: right; font-size: 1.2em;">Envío</th>
-                        <th style="font-size: 1.2em;">$<%= Number(order.ciudad_envio_costo || 0).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></th>
+                        <th style="font-size: 1.2em;">$<%= Number(order.shippingCityCost || 0).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></th>
                     </tr>
                     <tr>
                         <th colspan="6" style="text-align: right; font-size: 1.2em;">Total</th>
