--- a/src/views/store/orders/showOrders.ejs
+++ b/src/views/store/orders/showOrders.ejs
@@ -23,23 +23,23 @@
                             <h5 class="mb-1">Pedido #<%= order.id %></h5>
                             <div class="right-info-user">
                                 <span class="badge-user 
-                                    <%= order.estado_envio === 'enviado' ? 'bg-info-user' :
-                                        order.estado_envio === 'entregado' ? 'bg-success-user' :
-                                        order.estado_envio === 'cancelado' ? 'bg-danger-user' :
+                                    <%= order.shippingStatus === 'enviado' ? 'bg-info-user' :
+                                        order.shippingStatus === 'entregado' ? 'bg-success-user' :
+                                        order.shippingStatus === 'cancelado' ? 'bg-danger-user' :
                                         'bg-warning-user' %> ms-2">
-                                    <%= order.estado_envio ? order.estado_envio.toUpperCase() : 'PENDIENTE' %>
+                                    <%= order.shippingStatus ? order.shippingStatus.toUpperCase() : 'PENDIENTE' %>
                                 </span>
-                                <small class="text-muted-user"><%= new Date(order.fecha_creacion).toLocaleDateString() %></small>
+                                <small class="text-muted-user"><%= new Date(order.creationDate).toLocaleDateString() %></small>
                             </div>
                         </div>
                         <p class="mb-1-user">
                             <span class="strong-details">Total:</span> $<%= Number(order.total).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %>
-                            <span class="badge-user <%= order.estado === 'pagado' ? 'bg-success-user' : 'bg-warning-user' %> ms-2">
-                                <%= order.estado %>
+                            <span class="badge-user <%= order.state === 'pagado' ? 'bg-success-user' : 'bg-warning-user' %> ms-2">
+                                <%= order.state %>
                             </span>
                         </p>
                         <small class="text-muted-user">
-                            <%= order.direccion %>, <%= order.ciudad_envio_nombre %>
+                            <%= order.address %>, <%= order.shippingCityName %>
                         </small>
                     </a>
                 <% }); %>
