--- a/src/views/store/comparison.ejs
+++ b/src/views/store/comparison.ejs
@@ -41,6 +41,13 @@
     </div>
   </div>
 
+  <section class="more-devices-comparison">
+    <h2 class="more-devices-title">Otros dispositivos disponibles</h2>
+  
+    <div id="devices-grid" class="devices-grid-comparison">
+    </div>
+  </section>
+
     <%- include('../partials/footer.ejs') %>
 
 </body>
