--- a/src/views/store/information/warranty.ejs
+++ b/src/views/store/information/warranty.ejs
@@ -3,12 +3,12 @@
     <!-- Warranty -->
     <link type="text/css" rel="stylesheet" href="/css/store/warranty.css" />
 
-    <section class="contenido-garantia">
-        <h2 class="subtitulo-garantias">garantías</h2>
+    <section class="warranty-content">
+        <h2 class="warranty-subtitle">garantías</h2>
         <div class="pdf-container">
             <iframe src="/docs/Garantia-Dispositivos.pdf" class="pdf-iframe"></iframe>
             <iframe src="/docs/Garantia-Electrodomesticos.pdf" class="pdf-iframe"></iframe>
         </div>
     </section>
-
+    
 <%- include('../../partials/footer.ejs') %>
