--- a/public/css/store/warranty.css
+++ b/public/css/store/warranty.css
@@ -1,9 +1,9 @@
-.contenido-garantia {
+.warranty-content {
     text-align: center;
     padding: 50px;
 }
 
-.subtitulo-garantias{
+.warranty-subtitle{
     text-transform: uppercase;
 }
 
