--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -63,12 +63,12 @@
                         <div class="footer">
                             <h3 class="footer-title">Categorías</h3>
                             <ul class="footer-links">
-                                <li><a href="/store/1?&categoria=1">Móviles</a></li>
-                                <li><a href="/store/1?&categoria=2">SmartTV</a></li>
-                                <li><a href="/store/1?&categoria=3">Laptops</a></li>
-                                <li><a href="/store/1?&categoria=4">Consolas</a></li>
-                                <li><a href="/store/1?&categoria=5">Tablets</a></li>
-                                <li><a href="/store/1?&categoria=6">Otros</a></li>
+                                <li><a href="/store/1?&category=1">Móviles</a></li>
+                                <li><a href="/store/1?&category=2">SmartTV</a></li>
+                                <li><a href="/store/1?&category=3">Laptops</a></li>
+                                <li><a href="/store/1?&category=4">Consolas</a></li>
+                                <li><a href="/store/1?&category=5">Tablets</a></li>
+                                <li><a href="/store/1?&category=6">Otros</a></li>
                             </ul>
                         </div>
                     </div>
