Boton de agregar al carrito eliminado

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -141,7 +141,7 @@
         <script src="/js/store/libs/nouislider.min.js"></script>
         <script src="/js/store/libs/main.js" type="module"></script>
         <script src="/js/store/search.js"></script>
-        <script src="/js/store/cart/cart.js" type="module"></script>
+        <script src="/js/store/cart/deleteProduct.js" type="module"></script>
         <script src="/js/store/cart/cartPreview.js" type="module"></script>
         <script src="/js/store/fav/fav.js" type="module"></script>
         <script src="/js/utils/formatPrice.js"></script>
