--- a/src/views/store/cart.ejs
+++ b/src/views/store/cart.ejs
@@ -108,6 +108,7 @@
     <%- include('../partials/footer.ejs') %>
 
     <script src="/js/store/cart/cartView.js" type="module"></script>
+    <script src="/js/store/cart/cart.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </body>
