--- a/src/views/store/fav.ejs
+++ b/src/views/store/fav.ejs
@@ -89,6 +89,7 @@
     
 </body>
     <script src="/js/store/fav/favView.js" type="module"></script>
+    <script src="/js/store/cart/cart.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
