--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -451,6 +451,7 @@
 	
 	<script src="/js/utils/buttonComparison.js"></script>
 	<script src="/js/store/stockColor.js"></script>
+    <script src="/js/store/cart/cart.js" type="module"></script>
 	<script src="/js/store/rating.js" type="module"></script>
 	<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
