--- a/src/views/store/comparison.ejs
+++ b/src/views/store/comparison.ejs
@@ -41,12 +41,13 @@
     </div>
   </div>
 
-  <section class="more-devices-comparison">
-    <h2 class="more-devices-title">Otros dispositivos disponibles</h2>
-  
-    <div id="devices-grid" class="devices-grid-comparison">
-    </div>
-  </section>
+<section class="more-devices-comparison" id="top-sold-section">
+  <div id="top-sold-grid" class="devices-grid-comparison"></div>
+</section>
+
+<section class="more-devices-comparison" id="top-rated-section">
+  <div id="top-rated-grid" class="devices-grid-comparison"></div>
+</section>
 
     <%- include('../partials/footer.ejs') %>
 
