--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,6 +2,8 @@
 
   <link rel="stylesheet" href="/css/utils/toastify.css">
 
+  <link rel="stylesheet" href="/css/utils/ratingTooltip.css">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   
 <!-- HTML TAB -->
@@ -470,17 +472,22 @@ document.querySelector(".tablink").click();
                                     <% } %>
                                 </h4></a>
 
-                                <div class="product-rating">
-                                    <% for (let i = 1; i <= 5; i++) { %>
-                                        <% if (i <= Math.floor(product.averageRating)) { %>
-                                            <i class="fa-solid fa-star"></i>
-                                        <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
-                                            <i class="fa-regular fa-star-half-stroke"></i>
-                                        <% } else { %>
-                                            <i class="fa-regular fa-star"></i>
-                                        <% } %>
-                                    <% } %>
-                                </div>
+                                <div class="product-rating" data-product-id="<%= product.id %>">
+  <a href="/product/<%= product.id %>#tab3" class="rating-link">
+    <% for (let i = 1; i <= 5; i++) { %>
+      <% if (i <= Math.floor(product.averageRating)) { %>
+        <i class="custom-star fa-solid fa-star"></i>
+      <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
+        <i class="custom-star fa-regular fa-star-half-stroke"></i>
+      <% } else { %>
+        <i class="custom-star fa-regular fa-star"></i>
+      <% } %>
+    <% } %>
+  </a>
+
+  <div class="rating-tooltip hidden"></div>
+</div>
+
 
                                 <div class="product-btns">
                                     <button class="add-to-wishlist" 
@@ -514,7 +521,8 @@ document.querySelector(".tablink").click();
 <%- include('./partials/footer.ejs') %>
         
 </body>
-
+<script src="/js/utils/ratingTooltip.js" type="module"></script>
+<script src="/js/utils/ratingTab.js" type="module"></script>
 <script src="/js/utils/buttonComparison.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
