--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -278,6 +278,7 @@
 					</div>
 					<% } %>
 					<!-- /tab2  -->
+
 					<!-- tab3  -->
 					<div id="tab3" class="tab-pane fade in">
 						<div class="row">
@@ -384,7 +385,6 @@
 	<!-- /container -->
 </div>
 <!-- /SECTION -->
-	
 
 	<!-- Section -->
 	<div class="section">
@@ -448,7 +448,7 @@
 	<%- include('../partials/footer.ejs') %>
 
 	</body>
-	
+	<script src="/js/utils/ratingTab.js"></script>
 	<script src="/js/utils/buttonComparison.js"></script>
 	<script src="/js/store/stockColor.js"></script>
     <script src="/js/store/cart/cart.js" type="module"></script>
