--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -89,17 +89,18 @@ document.querySelector(".tablink").click();
                                             <% } %>
                                         </h4>
                                         </a>
-                                        <div class="product-rating">
+                                        <div class="product-rating clickable-rating" data-product-id="<%= product.id %>">
                                         <% for (let i = 1; i <= 5; i++) { %>
                                             <% if (i <= Math.floor(product.averageRating)) { %>
-                                                <i class="fa-solid fa-star"></i>
+                                                <i class="custom-star fa-solid fa-star"></i>
                                             <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
-                                                <i class="fa-regular fa-star-half-stroke"></i>
+                                                <i class="custom-star fa-regular fa-star-half-stroke"></i>
                                             <% } else { %>
-                                                <i class="fa-regular fa-star"></i>
+                                                <i class="custom-star fa-regular fa-star"></i>
                                             <% } %>
                                         <% } %>
-                                    </div>
+                                        <div class="rating-tooltip"></div>
+                                        </div>
                                         <div class="product-btns">
                                             <button class="add-to-wishlist" 
                                                 data-product-id="<%= product.id %>" 
@@ -150,17 +151,18 @@ document.querySelector(".tablink").click();
                                                 </del>
                                             <% } %>
                                         </h4></a>
-                                        <div class="product-rating">
+                                         <div class="product-rating clickable-rating" data-product-id="<%= product.id %>">
                                         <% for (let i = 1; i <= 5; i++) { %>
                                             <% if (i <= Math.floor(product.averageRating)) { %>
-                                                <i class="fa-solid fa-star"></i>
+                                                <i class="custom-star fa-solid fa-star"></i>
                                             <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
-                                                <i class="fa-regular fa-star-half-stroke"></i>
+                                                <i class="custom-star fa-regular fa-star-half-stroke"></i>
                                             <% } else { %>
-                                                <i class="fa-regular fa-star"></i>
+                                                <i class="custom-star fa-regular fa-star"></i>
                                             <% } %>
                                         <% } %>
-                                    </div>
+                                        <div class="rating-tooltip"></div>
+                                        </div>
                                         <div class="product-btns">
                                             <button class="add-to-wishlist" 
                                                 data-product-id="<%= product.id %>" 
@@ -213,19 +215,19 @@ document.querySelector(".tablink").click();
                                                 </del>
                                             <% } %>
                                         </h4></a>
-                                        <div class="product-rating">
-                                            <% for (let i = 1; i <= 5; i++) { %>
-                                                <% if (i <= Math.floor(product.averageRating)) { %>
-                                                    <i class="fa-solid fa-star"></i>
-                                                <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
-                                                    <i class="fa-regular fa-star-half-stroke"></i>
-                                                <% } else { %>
-                                                    <i class="fa-regular fa-star"></i>
-                                                <% } %>
+                                         <div class="product-rating clickable-rating" data-product-id="<%= product.id %>">
+                                        <% for (let i = 1; i <= 5; i++) { %>
+                                            <% if (i <= Math.floor(product.averageRating)) { %>
+                                                <i class="custom-star fa-solid fa-star"></i>
+                                            <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
+                                                <i class="custom-star fa-regular fa-star-half-stroke"></i>
+                                            <% } else { %>
+                                                <i class="custom-star fa-regular fa-star"></i>
                                             <% } %>
+                                        <% } %>
+                                        <div class="rating-tooltip"></div>
                                         </div>
                                         <div class="product-btns"> 
-
                                             <button class="add-to-wishlist" 
                                                 data-product-id="<%= product.id %>" 
                                                 data-product-color="<%= product.color %>">
@@ -276,16 +278,17 @@ document.querySelector(".tablink").click();
                                                 </del>
                                             <% } %>
                                         </h4></a>
-                                        <div class="product-rating">
-                                            <% for (let i = 1; i <= 5; i++) { %>
-                                                <% if (i <= Math.floor(product.averageRating)) { %>
-                                                    <i class="fa-solid fa-star"></i>
-                                                <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
-                                                    <i class="fa-regular fa-star-half-stroke"></i>
-                                                <% } else { %>
-                                                    <i class="fa-regular fa-star"></i>
-                                                <% } %>
+                                         <div class="product-rating clickable-rating" data-product-id="<%= product.id %>">
+                                        <% for (let i = 1; i <= 5; i++) { %>
+                                            <% if (i <= Math.floor(product.averageRating)) { %>
+                                                <i class="custom-star fa-solid fa-star"></i>
+                                            <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
+                                                <i class="custom-star fa-regular fa-star-half-stroke"></i>
+                                            <% } else { %>
+                                                <i class="custom-star fa-regular fa-star"></i>
                                             <% } %>
+                                        <% } %>
+                                        <div class="rating-tooltip"></div>
                                         </div>
                                         <div class="product-btns">
                                             <button class="add-to-wishlist" 
@@ -338,16 +341,17 @@ document.querySelector(".tablink").click();
                                                 </del>
                                             <% } %>
                                         </h4></a>
-                                        <div class="product-rating">
-                                            <% for (let i = 1; i <= 5; i++) { %>
-                                                <% if (i <= Math.floor(product.averageRating)) { %>
-                                                    <i class="fa-solid fa-star"></i>
-                                                <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
-                                                    <i class="fa-regular fa-star-half-stroke"></i>
-                                                <% } else { %>
-                                                    <i class="fa-regular fa-star"></i>
-                                                <% } %>
+                                         <div class="product-rating clickable-rating" data-product-id="<%= product.id %>">
+                                        <% for (let i = 1; i <= 5; i++) { %>
+                                            <% if (i <= Math.floor(product.averageRating)) { %>
+                                                <i class="custom-star fa-solid fa-star"></i>
+                                            <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
+                                                <i class="custom-star fa-regular fa-star-half-stroke"></i>
+                                            <% } else { %>
+                                                <i class="custom-star fa-regular fa-star"></i>
                                             <% } %>
+                                        <% } %>
+                                        <div class="rating-tooltip"></div>
                                         </div>
                                         <div class="product-btns">
                                             <button class="add-to-wishlist" 
@@ -471,23 +475,19 @@ document.querySelector(".tablink").click();
                                         </del>
                                     <% } %>
                                 </h4></a>
-
-                                <div class="product-rating" data-product-id="<%= product.id %>">
-  <a href="/product/<%= product.id %>#tab3" class="rating-link">
-    <% for (let i = 1; i <= 5; i++) { %>
-      <% if (i <= Math.floor(product.averageRating)) { %>
-        <i class="custom-star fa-solid fa-star"></i>
-      <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
-        <i class="custom-star fa-regular fa-star-half-stroke"></i>
-      <% } else { %>
-        <i class="custom-star fa-regular fa-star"></i>
-      <% } %>
-    <% } %>
-  </a>
-
-  <div class="rating-tooltip hidden"></div>
-</div>
-
+                                
+                                <div class="product-rating clickable-rating" data-product-id="<%= product.id %>">
+                                    <% for (let i = 1; i <= 5; i++) { %>
+                                    <% if (i <= Math.floor(product.averageRating)) { %>
+                                        <i class="fa-solid fa-star"></i>
+                                    <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
+                                        <i class="fa-regular fa-star-half-stroke"></i>
+                                    <% } else { %>
+                                        <i class="fa-regular fa-star"></i>
+                                    <% } %>
+                                    <% } %>
+                                <div class="rating-tooltip"></div>
+                                </div>
 
                                 <div class="product-btns">
                                     <button class="add-to-wishlist" 
@@ -521,8 +521,8 @@ document.querySelector(".tablink").click();
 <%- include('./partials/footer.ejs') %>
         
 </body>
-<script src="/js/utils/ratingTooltip.js" type="module"></script>
 <script src="/js/utils/ratingTab.js" type="module"></script>
+<script src="/js/utils/ratingTooltip.js" type="module"></script>
 <script src="/js/utils/buttonComparison.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
