--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -448,7 +448,7 @@
 	<%- include('../partials/footer.ejs') %>
 
 	</body>
-	<script src="/js/utils/ratingTab.js"></script>
+	<script src="/js/utils/ratingTab.js" type="module"></script>
 	<script src="/js/utils/buttonComparison.js"></script>
 	<script src="/js/store/stockColor.js"></script>
     <script src="/js/store/cart/cart.js" type="module"></script>
