--- a/src/views/store/comparison.ejs
+++ b/src/views/store/comparison.ejs
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="/css/store/comparison.css">
     <link rel="stylesheet" href="/css/store/search.css">
     <link rel="stylesheet" href="/css/utils/toastify.css">
+    <link rel="stylesheet" href="/css/utils/ratingTooltip.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
@@ -53,6 +54,7 @@
 
 </body>
 
+    <script src="/js/utils/ratingTab.js" type="module"></script>
     <script src="/js/store/comparison.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	  <script src="https://unpkg.com/feather-icons"></script>
